--- a/.env.example
+++ b/.env.example
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=sharaf.binte.younus@g.bracu.ac.bd
+MAIL_PASSWORD=qmnhaptlyagktjyw 
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=sharaf.binte.younus@g.bracu.ac.bd
+MAIL_FROM_NAME="ArtConnect"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
