--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,17 @@
 {
     "version": 2,
+    "buildCommand": "npm run build",
+    "outputDirectory": "public",
     "functions": {
         "api/index.php": {
             "runtime": "vercel-php@0.6.0"
         }
     },
     "routes": [
+        {
+            "src": "/build/(.*)",
+            "dest": "public/build/$1"
+        },
         {
             "src": "/(css|js|images)/(.*)",
             "dest": "public/$1/$2"
