--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "outputDirectory": "public",
     "functions": {
         "api/index.php": {
-            "runtime": "vercel-php"
+            "runtime": "now-php@1.0.0"
         }
     },
     "routes": [
