--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,26 @@
 {
     "version": 2,
-    "buildCommand": "npm run build",
-    "outputDirectory": "public",
-    "functions": {
-        "api/index.php": {
-            "runtime": "now-php@1.0.0"
-        }
-    },
-    "routes": [
+    "builds": [
         {
-            "src": "/build/(.*)",
-            "dest": "public/build/$1",
-            "headers": {
-                "Cache-Control": "public, max-age=31536000, immutable"
+            "src": "package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "public"
             }
         },
         {
+            "src": "api/**/*.php",
+            "use": "@vercel/php"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/build/(.*)",
+            "dest": "/build/$1"
+        },
+        {
             "src": "/(css|js|images|favicon.ico)/(.*)",
-            "dest": "public/$1/$2",
-            "headers": {
-                "Cache-Control": "public, max-age=31536000"
-            }
+            "dest": "/$1/$2"
         },
         {
             "src": "/(.*)",
